--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,7 +1,7 @@
 ---
 driver:
   name: vagrant
-  
+
 provisioner:
   name: chef_zero
 
@@ -25,7 +25,7 @@ suites:
   - name: windows2012r2
     excludes: centos-7.2
     run_list:
-      - recipe[windows_patch_compliance::default]
+      # - recipe[windows_patch_compliance::windows_patch]
     attributes:
     driver:
       network:
