--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -25,7 +25,7 @@ suites:
   - name: windows2012r2
     excludes: centos-7.2
     run_list:
-      # - recipe[windows_patch_compliance::windows_patch]
+      - recipe[windows_patch_compliance::windows_patch]
     attributes:
     verifier:
       inspec_tests:
